--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "eslint": "^7.7.0",
     "events": "^3.2.0",
     "express": "^4.17.1",
+    "jaconv": "^1.0.4",
     "node-fetch": "^2.6.0",
-    "socket.io": "^2.3.0"
+    "sequelize": "^6.21.0",
+    "socket.io": "^2.3.0",
+    "sqlite3": "^5.0.8"
   },
   "devDependencies": {
     "eslint-config-airbnb-base": "^14.2.0",
